# subo

./: .gitignore  .golangci.yml  .goreleaser.yml  .subo.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  migrate_cache.go  root.go  update_checker.go
.github/: renovate.json5
.github/workflows/: ci.yml  dispatch-on-release.yml  docker.yml  golangci-lint.yml  links.yml  release.yml  sanity.yml  tinygo-base.yml
builder/: builder.go  builder.mk  native.go  prereq.go  prereq_test.go  remote.go  static.go
builder/context/: buildcontext.go  directive.go  native.go  prereq.go  prereq_test.go  static.go
builder/template/: config.go  templates.go
builders/assemblyscript/: Dockerfile  Makefile
builders/rust/: .dockerignore  .rs-ver  Cargo.toml  Dockerfile  Empty.toml  (+3 more)
builders/rust/suborbital/: Cargo.toml
builders/rust/suborbital/src/: lib.rs
changelogs/: v0.1.0.md  v0.3.2.md  v0.4.2.md  v0.6.0.md
deployer/: cloudflaredeployer.go  deployer.go  fly.go  k8sdeployer.go
docs/: get-started.md  wasm.md
examples/: Directive.yaml
packager/: bindlepublisher.go  bundlepackager.go  dockerimagepackager.go  dockerpublisher.go  packager.go  static.go
project/: context.go  directive.go  tenantconfig.go
publisher/: bindlepublisher.go  dockerpublisher.go  publisher.go
scn/: api.go  emailverifier.go  environmenttoken.go  telemetry.go
scripts/: sanity_project.sh  sanity_runnable.sh  smoketest.sh  toolchaintest.sh
se2/: api.go  emailverifier.go  environmenttoken.go  telemetry.go
subo/: main.go  root.go
test-project/: Directive.yaml
(+160 files in other folders)
