[package]
name = "suborbital"
version = "0.0.1"
authors = ["cohix <connorjhicks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
simple-error = "0.1.9"
cargo_toml = "0.6.3"